# MicroGames-FW

./: .gitignore  Hello Smeky.  MicroGames-FW.cscope_file_list  README.md  test.txt  todo.txt
data/shaders/: default.frag  default.vert
dependency/mingw/SDL2_image-2.0.1/i686-w64-mingw32/include/SDL2/: SDL_image.h
src/graphics/: Font.cpp  Font.h
src/mgfw/: MGFW.cpp  MGFW.h  main.cpp
src/mgfw/graphics/: Camera.cpp  Camera.h  CircleShape.cpp  CircleShape.h  Color.cpp  Color.h  Drawable.cpp  Drawable.h  Font.cpp  Font.h  Image.cpp  Image.h  LineShape.cpp  LineShape.h  OpenGL.h  PrimitiveType.h  RectShape.cpp  RectShape.h  RenderEntity.h  RenderStates.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Shape.cpp  Shape.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Transformable.cpp  Transformable.h  UnitMode.h  Vertex.cpp  Vertex.h  VertexArray.cpp  VertexArray.h  VertexArray.h.save-failed
src/mgfw/graphics/shaders/: default.frag  default.vert
src/mgfw/math/: Box2D.cpp  Box2D.h  CircleShapePhysic.cpp  CircleShapePhysic.h  Matrix4.cpp  Matrix4.h  Matrix4.hpp  PhysicRect.cpp  PhysicRect.h  PhysicWorld.cpp  PhysicWorld.h  Rect.h  RectShapePhysic.cpp  RectShapePhysic.h  ShapePhysic.cpp  ShapePhysic.h  Vector2.h  Vector2.hpp  Vector3.h  Vector3.hpp  Vector4.h  Vector4.hpp
src/mgfw/network/: CMakeLists.txt
src/mgfw/network/demo/client/: CMakeLists.txt  client.cpp
src/mgfw/network/demo/server/: CMakeLists.txt  server.cpp
src/mgfw/network/inc/: Connection.h  Utils.h
src/mgfw/network/src/: Connection.cpp
src/mgfw/system/: Clock.cpp  Clock.h  ErrorLog.cpp  ErrorLog.h  File.cpp  File.h  Init.cpp  InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h  Time.cpp  Time.h  Timer.cpp  Timer.h  Window.cpp  Window.h
(+1 files in other folders)
